--- a/src/components/book/book.module.scss
+++ b/src/components/book/book.module.scss
@@ -58,7 +58,8 @@
     color: #4386bf;
     position: relative;
 
-    span {
+    span,
+    .remove {
       margin: 0 0.8rem;
       cursor: pointer;
       transition: all 0.2s ease-in-out;
@@ -106,8 +107,8 @@
     .circle {
       .mask,
       .fill {
-        width: 6rem;
-        height: 6rem;
+        // width: 6rem;
+        // height: 6rem;
         position: absolute;
         border-radius: 50%;
       }
@@ -116,7 +117,7 @@
         clip: rect(0, 6rem, 6rem, 3rem);
 
         .fill {
-          clip: rect(0, 3rem, 6rem, 0);
+          // clip: rect(0, 3rem, 6rem, 0);
           background-color: #227ded;
         }
       }
@@ -128,8 +129,8 @@
         background: #d2eaf1;
         line-height: 79px;
         text-align: center;
-        margin-top: 10px;
-        margin-left: 10px;
+        margin-top: 8px;
+        margin-left: 8px;
         color: #1e51dc;
         position: absolute;
         z-index: 100;
@@ -189,4 +190,12 @@
   100% {
     transform: rotate(135deg);
   }
+}
+
+.remove {
+  background: transparent;
+  color: #4386bf;
+  outline: none;
+  border: none;
+  font-family: 'Roboto Slab', serif;
 }
