--- a/src/components/book/book.module.scss
+++ b/src/components/book/book.module.scss
@@ -115,8 +115,6 @@
     .circle {
       .mask,
       .fill {
-        // width: 6rem;
-        // height: 6rem;
         position: absolute;
         border-radius: 50%;
       }
@@ -125,7 +123,6 @@
         clip: rect(0, 6rem, 6rem, 3rem);
 
         .fill {
-          // clip: rect(0, 3rem, 6rem, 0);
           background-color: #227ded;
         }
       }
@@ -162,6 +159,17 @@
   color: #121212;
   font-family: 'Roboto Slab', serif;
   font-weight: 300;
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 3px;
+    background: #f2336d;
+    height: 100%;
+    left: -50%;
+  }
 
   .chapter {
     opacity: 0.5;
